--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
             <button class="btn dropdown-toggle primary-bg" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <img src="./assets/arrow-down.svg" class="arrow-down" alt="" />
             </button>
-            <div class="dropdown-menu primary-bg">
+            <div class="dropdown-menu dropdown-menu-ingredients primary-bg">
               <div class="dropdown-col">
                 <a class="dropdown-item primary-bg" href="#">Coco</a>
                 <a class="dropdown-item primary-bg" href="#">Sucre</a>
@@ -84,7 +84,7 @@
             <button class="btn dropdown-toggle success-bg" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <img src="./assets/arrow-down.svg" class="arrow-down" alt="" />
             </button>
-            <div class="dropdown-menu success-bg">
+            <div class="dropdown-menu dropdown-menu-appliance success-bg">
               <div class="dropdown-col">
                 <a class="dropdown-item success-bg" href="#">Coco</a>
                 <a class="dropdown-item success-bg" href="#">Sucre</a>
@@ -100,7 +100,7 @@
             <button class="btn dropdown-toggle danger-bg" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <img src="./assets/arrow-down.svg" class="arrow-down" alt="" />
             </button>
-            <div class="dropdown-menu danger-bg">
+            <div class="dropdown-menu dropdown-menu-ustensils danger-bg">
               <div class="dropdown-col">
                 <a class="dropdown-item danger-bg" href="#">Coco</a>
                 <a class="dropdown-item danger-bg" href="#">Sucre</a>
@@ -114,7 +114,8 @@
 
     <section class="cards-section">
       <div class="card-deck">
-        <div class="card">
+        <!-- Make a Spinner -->
+        <!-- <div class="card">
           <img class="card-img-top" src="./assets/images/placeholder.png" alt="Card image cap" />
           <div class="card-body">
             <div class="first-row">
@@ -193,7 +194,7 @@
               </p>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
 
