--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Les petits plats</title>
+
+    <head>
+      <div id="loadOverlay" style="background-color: #333; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; z-index: 2000"></div>
+    </head>
   </head>
 
   <body>
+    <div class="loader-wrapper">
+      <div class="loader"></div>
+    </div>
+
     <header>
       <a href="/">
         <img src="./assets/logo.svg" class="logo" alt="" />
@@ -28,18 +36,7 @@
 
     <section class="dropdown-section">
       <div class="tags-wrapper">
-        <button class="btn primary-bg" type="submit">
-          Coco
-          <img src="./assets/close-vector.svg" class="close-btn" alt="" />
-        </button>
-        <button class="btn success-bg" type="submit">
-          Coco
-          <img src="./assets/close-vector.svg" class="close-btn" alt="" />
-        </button>
-        <button class="btn danger-bg" type="submit">
-          Coco
-          <img src="./assets/close-vector.svg" class="close-btn" alt="" />
-        </button>
+        <!-- Data injected  from Home.js -->
       </div>
 
       <div class="dropdowns-wrapper">
@@ -50,30 +47,7 @@
               <img src="./assets/arrow-down.svg" class="arrow-down" alt="" />
             </button>
             <div class="dropdown-menu dropdown-menu-ingredients primary-bg">
-              <div class="dropdown-col">
-                <a class="dropdown-item primary-bg" href="#">Coco</a>
-                <a class="dropdown-item primary-bg" href="#">Sucre</a>
-                <a class="dropdown-item primary-bg" href="#">Sucre</a>
-                <a class="dropdown-item primary-bg" href="#">Concombre</a>
-                <a class="dropdown-item primary-bg" href="#">Coco</a>
-                <a class="dropdown-item primary-bg" href="#">Coco</a>
-                <a class="dropdown-item primary-bg" href="#">Sucre</a>
-                <a class="dropdown-item primary-bg" href="#">Sucre</a>
-                <a class="dropdown-item primary-bg" href="#">Concombre</a>
-                <a class="dropdown-item primary-bg" href="#">Concombre</a>
-              </div>
-              <div class="dropdown-col">
-                <a class="dropdown-item primary-bg" href="#">Coco</a>
-                <a class="dropdown-item primary-bg" href="#">Sucre</a>
-                <a class="dropdown-item primary-bg" href="#">Sucre</a>
-                <a class="dropdown-item primary-bg" href="#">Concombre</a>
-                <a class="dropdown-item primary-bg" href="#">Coco</a>
-                <a class="dropdown-item primary-bg" href="#">Coco</a>
-                <a class="dropdown-item primary-bg" href="#">Sucre</a>
-                <a class="dropdown-item primary-bg" href="#">Sucre</a>
-                <a class="dropdown-item primary-bg" href="#">Concombre</a>
-                <a class="dropdown-item primary-bg" href="#">Concombre</a>
-              </div>
+              <!-- Data injected  from Home.js -->
             </div>
           </div>
         </div>
@@ -85,11 +59,7 @@
               <img src="./assets/arrow-down.svg" class="arrow-down" alt="" />
             </button>
             <div class="dropdown-menu dropdown-menu-appliance success-bg">
-              <div class="dropdown-col">
-                <a class="dropdown-item success-bg" href="#">Coco</a>
-                <a class="dropdown-item success-bg" href="#">Sucre</a>
-                <a class="dropdown-item success-bg" href="#">Concombre</a>
-              </div>
+              <!-- Data injected  from Home.js -->
             </div>
           </div>
         </div>
@@ -102,9 +72,7 @@
             </button>
             <div class="dropdown-menu dropdown-menu-ustensils danger-bg">
               <div class="dropdown-col">
-                <a class="dropdown-item danger-bg" href="#">Coco</a>
-                <a class="dropdown-item danger-bg" href="#">Sucre</a>
-                <a class="dropdown-item danger-bg" href="#">Concombre</a>
+                <!-- Data injected  from Home.js -->
               </div>
             </div>
           </div>
@@ -114,7 +82,8 @@
 
     <section class="cards-section">
       <div class="card-deck">
-        <!-- Make a Spinner -->
+        <!-- TODO : Make a Spinner -->
+        <!-- Data injected  from Home.js -->
         <!-- <div class="card">
           <img class="card-img-top" src="./assets/images/placeholder.png" alt="Card image cap" />
           <div class="card-body">
