Search logic ok

--- a/src/index.html
+++ b/src/index.html
@@ -81,92 +81,7 @@
     </section>
 
     <section class="cards-section">
-      <div class="card-deck">
-        <!-- TODO : Make a Spinner -->
-        <!-- Data injected  from Home.js -->
-        <!-- <div class="card">
-          <img class="card-img-top" src="./assets/images/placeholder.png" alt="Card image cap" />
-          <div class="card-body">
-            <div class="first-row">
-              <h1 class="card-title">Limonade de Coco</h1>
-              <div class="card-timer">
-                <img src="./assets/clock.svg" class="clock-icon" alt="" />
-                10 min
-              </div>
-            </div>
-            <div class="second-row">
-              <div class="card-ingredients">
-                <ul>
-                  <li><span>Lait de coco: </span> 400ml</li>
-                  <li><span>Jus de citron: </span> 2</li>
-                  <li><span>Créme de coco: </span> 4cuillères</li>
-                  <li><span>Sucre: </span> 20g</li>
-                  <li><span>Glaçons: </span> 2</li>
-                </ul>
-              </div>
-              <p class="card-recipe">
-                Mettre les glaçons à votre goût dans le blender, ajouter le lait, la crème de coco, le jus de 2 citrons et le sucre. Mixer jusqu'à avoir la consistence désirée
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <img class="card-img-top" src="./assets/images/placeholder.png" alt="Card image cap" />
-          <div class="card-body">
-            <div class="first-row">
-              <h1 class="card-title">Limonade de Coco</h1>
-              <div class="card-timer">
-                <img src="./assets/clock.svg" class="clock-icon" alt="" />
-                10 min
-              </div>
-            </div>
-            <div class="second-row">
-              <div class="card-ingredients">
-                <ul>
-                  <li><span>Lait de coco: </span> 400ml</li>
-                  <li><span>Jus de citron: </span> 2</li>
-                  <li><span>Créme de coco: </span> 4cuillères</li>
-                  <li><span>Sucre: </span> 20g</li>
-                  <li><span>Glaçons: </span> 2</li>
-                </ul>
-              </div>
-              <p class="card-recipe">
-                Mettre les glaçons à votre goût dans le blender, ajouter le lait, la crème de coco, le jus de 2 citrons et le sucre. Mixer jusqu'à avoir la consistence désirée
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <img class="card-img-top" src="./assets/images/placeholder.png" alt="Card image cap" />
-          <div class="card-body">
-            <div class="first-row">
-              <h1 class="card-title">Limonade de Coco</h1>
-              <div class="card-timer">
-                <img src="./assets/clock.svg" class="clock-icon" alt="" />
-                10 min
-              </div>
-            </div>
-            <div class="second-row">
-              <div class="card-ingredients">
-                <ul>
-                  <li><span>Lait de coco: </span> 400ml</li>
-                  <li><span>Jus de citron: </span> 2</li>
-                  <li><span>Créme de coco: </span> 4cuillères</li>
-                  <li><span>Sucre: </span> 20g</li>
-                  <li><span>Glaçons: </span> 2</li>
-                </ul>
-              </div>
-              <p class="card-recipe">
-                Mettre les glaçons à votre goût dans le blender, ajouter le lait, la crème de coco, le jus de 2 citrons et le sucre. Mixer jusqu'à avoir la consistence désirée
-              </p>
-            </div>
-          </div>
-        </div> -->
-      </div>
+      <div class="card-deck"></div>
     </section>
-
-    <div class="test-wrapper"></div>
   </body>
 </html>
