Search (for tags)

--- a/src/index.html
+++ b/src/index.html
@@ -82,6 +82,9 @@
 
     <section class="cards-section">
       <div class="card-deck"></div>
+      <div class="no-result hide">
+        <p><em>Aucune recette ne correspond à votre critère… vous pouvez chercher « tarte aux pommes », « poisson », etc.</em></p>
+      </div>
     </section>
   </body>
 </html>
