--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Les petits plats</title>
+    <link rel="icon" href="./assets/favicon.ico" />
 
     <head>
       <div id="loadOverlay" style="background-color: #333; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; z-index: 2000"></div>
@@ -27,7 +27,7 @@
       <nav class="navbar navbar-light light-bg">
         <form class="form-inline">
           <input class="form-control mr-sm-2 search-input" type="search" placeholder="Rechercher un ingrédient, appareil, ustensiles ou une recette" aria-label="Search" />
-          <button class="btn my-2 my-sm-0 search-btn">
+          <button class="btn my-2 my-sm-0 search-btn" tabindex="-1">
             <img src="./assets/search-vector.svg" class="search" alt="" />
           </button>
         </form>
